--- a/MyApplication/app/src/main/res/layout/activity_main.xml
+++ b/MyApplication/app/src/main/res/layout/activity_main.xml
@@ -9,6 +9,15 @@
                 android:paddingBottom="@dimen/activity_vertical_margin"
                 tools:context=".MainActivity">
 
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textSize="30dp"
+        android:text="WiFi state is  "
+        android:id="@+id/textView_wifistate"
+        android:layout_alignParentTop="true"
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="51dp" />
 
     <Button
         android:layout_width="200dp"
@@ -17,6 +26,8 @@
         android:background="@drawable/button_selector"
         android:layout_centerVertical="true"
         android:layout_centerHorizontal="true" />
+
+
 
 </RelativeLayout>
 
